# ui-adaptagrams

./: CMakeLists.txt
cmake/: adaptagramsConfig.cmake
cola/libavoid/: CMakeLists.txt
